--- a/styles/architect.css
+++ b/styles/architect.css
@@ -16,8 +16,12 @@
     padding: 20px 25px;
     cursor: pointer;
     border: 0px;
+    margin-bottom: 20px;
 }
 
+.text-light-gray {
+    color: #727272;
+}
 /* header styles */
 header {
     background: rgba(255, 144, 14, 0.10);
@@ -66,13 +70,47 @@ nav li a {
     color: #131313;
 }
 
-.banner-description {
-    color: #727272;
-}
+
 .banner img{
     margin-top: 20px;
     width:100%;
 }
+
+
+
+
+/* main styles */
+main{
+    max-width: 1440px;
+    margin: 70px auto;
+}
+
+/* teams style */
+.teams-container{
+    display: flex;
+    align-items: center;
+}
+.teams-img-container{
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 1.5rem;
+}
+.teams-content{
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.teams-title{
+    font-size: 2.8rem;
+}
+.teams-title .quick-list{
+    color: #727272;
+    font-weight: 500;
+}
+.teams-title .text-features{
+    color: #FF900E;
+    font-weight: 700;
+}
+
 
 
 /*------ resposnive media query------ */
@@ -82,8 +120,15 @@ nav li a {
     header{
         padding: 20px;
     }
-    nav{
+    nav, .teams-container{
         flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding-left: 20px;
+        padding-right: 20px;
     }
     
 }
@@ -95,5 +140,8 @@ nav li a {
     }
     nav{
         flex-direction: column;
+    }
+    .teams-container{
+        flex-direction: column-reverse;
     }
 }
