--- a/styles/architect.css
+++ b/styles/architect.css
@@ -5,6 +5,8 @@
     font-family: 'Lato', sans-serif;
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
+    margin: 0px;
+    bottom: 0px;
 }
 
 .btn-primary {
