--- a/styles/architect.css
+++ b/styles/architect.css
@@ -155,7 +155,7 @@ main {
 .feature-img img {
     height: 90%;
     margin-left: 50px;
-    width: auto;
+    margin-right: 50px;
 }
 
 .ten-years-badge h2 {
