--- a/styles/architect.css
+++ b/styles/architect.css
@@ -87,7 +87,7 @@ nav li a {
 /* main styles */
 main {
     max-width: 1440px;
-    padding: 80px;
+    padding: 70px;
 }
 
 /* teams style */
@@ -172,7 +172,6 @@ main {
 .facts-card-container {
     display: flex;
     justify-content: space-around;
-    margin:50px;
 }
 
 .facts-card-container .card {
@@ -199,7 +198,7 @@ main {
 /* sponsors style */
 .sponsors {
     text-align: center;
-    margin: 20px;
+    /* margin: 20px; */
 }
 
 .sponsors-img-container {
@@ -210,9 +209,10 @@ main {
     gap: 40px;
 
 }
-.sponsors .section-title{
-    margin: 20px;
-}
+/* .sponsors .section-title{
+    margin-top: 20px;
+    margin-bottom: 20px;
+} */
 
 .sponsors-img-container img {
     width: 165px;
@@ -258,16 +258,21 @@ footer {
 
     .facts-card-container {
         gap: 20px;
+        margin-top: 20px;
     }
 
     .feature-img img {
-        width: 100%;
+        width: 80%;
         margin-left: 0;
 
     }
+    main {
+        padding: 10px;
+    }
 
     .ten-years-badge {
-        position:relative;
+        position:static;
+        
         max-width: 300px;
     }
 }
@@ -298,5 +303,13 @@ footer {
 
     .features {
         align-items: center;
+    }
+    .feature-img img {
+        width: 80%;
+        margin-left: 0;
+
+    }
+    main {
+        padding: 10px;
     }
 }
